--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@supabase/supabase-js": "^2.39.3",
     "chart.js": "^4.4.1",
     "date-fns": "^3.0.6",
-    "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide": "^0.309.0"
   },
   "devDependencies": {
-    "vite": "^5.0.11",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.16",
-    "vite-plugin-pwa": "^0.17.4"
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
